src/app/snapshots/cargo_hawk__app__tests__auto_disabled.snap
---
source: src/app/mod.rs
expression: terminal.backend()
---
" 1 check  2 test  3 clippy                                            Cargo Hawk"
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"Not started                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"q/Esc: Quit | p: Edit plan | a: Auto advance | 1-9: Switch tab | j/k/↑/↓: Scroll"
