src/app/snapshots/cargo_hawk__app__tests__first_screen.snap
---
source: src/app/mod.rs
expression: terminal.backend()
---
" »  1 check  2 test  3 clippy                                         Cargo Hawk"
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"Not started                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌Command───────────────────────────────────────────────────────────────────────┐"
"│cargo check                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"q/Esc: Quit | i: Edit command | p: Edit plan | Enter/r: Run | a: Auto advance | "
